@@ -1,5 +1,11 @@
 2020-07-14 Sergey Belyashov <sergey.belyashov@gmail.com>
 
+	* device/lib/z80/Makefile.in,
+	  device/lib/z80/memcpy.s:
+	  Implement RFE #664 for Z80 port.
+
+2020-07-14 Sergey Belyashov <sergey.belyashov@gmail.com>
+
 	* device/lib/Makefile.in:
 	  Add lib file removing before creating new one to prevent merging
 	  Add device/lib/Makefile refreshing after changing Makefile.in
